package NDoom;

message TOffroadWadRanges {
    repeated uint32 Ranges = 1 [packed=true];
}